--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
             <a class="logo" href="./index.html"
               ><span class="logo__web">Web</span>Studio</a
             >
-            <input class="mobile-input" type="checkbox" id="toggle" />
+            <button type="button" class="header-open-menu" data-open-Menu>
+              <svg class="menu-open-svg">
+                <use href="./Image/icons/symbol-defs.svg#icon-menuheader"></use>
+              </svg>
+            </button>
+
+            <!-- <input class="mobile-input" type="checkbox" id="toggle" />
             <label class="mobile-input__label" for="toggle">
               <span></span>
             </label>
@@ -58,7 +64,7 @@
                   <a href="#" class="nav-menu__network">LinkedIn</a>
                 </li>
               </ul>
-            </ul>
+            </ul> -->
             <ul class="header-list">
               <li class="header-list__item">
                 <a class="header-list__link" href="./index.html">Студія</a>
@@ -90,6 +96,46 @@
         </div>
       </header>
     </div>
+    <div class="menu header-form is-hidden">
+              <button type="button" class="header-form-button" data-close-Menu>
+                <svg class="menu-close-svg">
+                  <use href="./Image/icons/symbol-defs.svg#icon-cross"></use>
+                </svg>
+              </button>
+              <ul class="header-form-list">
+                <li class="header-form-list__item">
+                  <a class="header-form-list__link" href="./index.html">Студія</a>
+                </li>
+                <li class="header-form-list__item">
+                  <a class="header-form-list__link" href="./Portfolio.html">Портфоліо</a>
+                </li>
+                <li class="header-form-list__item">
+                  <a class="header-form-list__link" href="#">Контакти</a>
+                </li>
+              </ul>
+              <ul class="header-form-contacts">
+                <li class="header-form-contacts__item">
+                  <a class="header-form-contacts__link">+38 096 111 11 11</a>
+                </li>
+                <li class="header-form-contacts__item">
+                  <a class="header-form-contacts__link">info@devstudio.com</a>
+                </li>
+              </ul>
+              <ul class="header-form-network">
+                <li class="header-form-network__item">
+                  <a class="header-form-network__link">Instagram</a>
+                </li>
+                <li class="header-form-network__item">
+                  <a class="header-form-network__link">Twitter</a>
+                </li>
+                <li class="header-form-network__item">
+                  <a class="header-form-network__link">Facebook</a>
+                </li>
+                <li class="header-form-network__item">
+                  <a class="header-form-network__link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
     <main>
       <!--Section hero-->
       <section data-aos="zoom-in" class="hero">
@@ -539,6 +585,7 @@
     </footer>
 
     <script src="./modal.js"></script>
+    <script src="./mobile-menu.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
