--- a/Portfolio.html
+++ b/Portfolio.html
@@ -22,6 +22,11 @@
               <a class="logo" href="./index.html"
                 ><span class="logo__web">Web</span>Studio</a
               >
+              <button type="button" class="header-open-menu" data-open-Menu>
+                <svg class="menu-open-svg">
+                  <use href="./Image/icons/symbol-defs.svg#icon-menuheader"></use>
+                </svg>
+              </button>
               <ul class="header-list">
                 <li class="header-list__item">
                   <a class="header-list__link" href="./index.html">Студія</a>
@@ -50,6 +55,46 @@
           </div>
         </div>
       </header>
+      <div class="menu header-form is-hidden">
+              <button type="button" class="header-form-button" data-close-Menu>
+                <svg class="menu-close-svg">
+                  <use href="./Image/icons/symbol-defs.svg#icon-cross"></use>
+                </svg>
+              </button>
+              <ul class="header-form-list">
+                <li class="header-form-list__item">
+                  <a class="header-form-list__link" href="./index.html">Студія</a>
+                </li>
+                <li class="header-form-list__item">
+                  <a class="header-form-list__link" href="./Portfolio.html">Портфоліо</a>
+                </li>
+                <li class="header-form-list__item">
+                  <a class="header-form-list__link" href="#">Контакти</a>
+                </li>
+              </ul>
+              <ul class="header-form-contacts">
+                <li class="header-form-contacts__item">
+                  <a class="header-form-contacts__link">+38 096 111 11 11</a>
+                </li>
+                <li class="header-form-contacts__item">
+                  <a class="header-form-contacts__link">info@devstudio.com</a>
+                </li>
+              </ul>
+              <ul class="header-form-network">
+                <li class="header-form-network__item">
+                  <a class="header-form-network__link">Instagram</a>
+                </li>
+                <li class="header-form-network__item">
+                  <a class="header-form-network__link">Twitter</a>
+                </li>
+                <li class="header-form-network__item">
+                  <a class="header-form-network__link">Facebook</a>
+                </li>
+                <li class="header-form-network__item">
+                  <a class="header-form-network__link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
       <!-- SECTION MAIN -->
       <main class="main">
         <section class="section-bth">
@@ -262,5 +307,6 @@
             </section>
         </div>
       </footer>
+      <script src="./mobile-menu.js"></script>
   </body>
 </html>
